k8s/postgres.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
            - name: secret-volume
              mountPath: "/etc/secrets"
              readOnly: true
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: pg-data
        - name: secret-volume
          secret:
            secretName: postgres-credentials

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
