k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: dev
spec:
  rules:
  - host: devops-project
    http:
      paths:
      - path: /hello
        pathType: Exact
        backend:
          service:
            name: backend-service
            port:
              number: 5000
      - path: /stress
        pathType: Exact
        backend:
          service:
            name: backend-service
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
